# llm-mask

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/plans/: 2026-03-10-regex-premasker-repair-layer.md
src/llm_mask/: __init__.py  _chunker.py  _judge.py  _llm.py  _merger.py  _ner_masker.py  _parser.py  _prompts.py  _reader.py  _regex_masker.py  _repair.py  client.py  exceptions.py  mapping.py  unmasker.py
src/llm_mask/prompts/en/: mask_prompt.txt
src/llm_mask/prompts/ru/: mask_prompt.txt
tests/: test_chunker.py  test_client.py  test_judge.py  test_parser.py  test_regex_masker.py  test_repair.py  test_unmasker.py
tests/fixtures/: sample.md
